# google-ads-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .railwayignore  AGENTS.md  AI_MAX_SKILL.md  ASSET_CREATION_SKILL.md  CAMPAIGN_CREATION_BEST_PRACTICES.md  CLAUDE.md  COLD_START_RESEARCH.md  CONSULTATION_RESULTS.md  CONTROL_CENTER_SPEC.md  DIGEST_SKILL.md  DIGEST_SOP.md  Dockerfile  GCHAT_CARD_SCHEMA.md  GENERATED_IMAGE_BEST_PRACTICES.md  GOOGLE_ADS_API_REFERENCE.md  Gearwrench_Shop_PPC_Assessment_Assignment.docx  Google_Ads_MCP_Scoping.docx  HOSTING_MIGRATION_PLAN.md  NEGATIVE_KEYWORD_AUDIT_SKILL.md  PHASE_0_CHECKLIST.md  PMAX_BRAND_BREAKOUT_SKILL.md  PMAX_IMAGE_BEST_PRACTICES.md  PPC_ADVISOR.md  REPORTING_RESEARCH.md  SESSION_HANDOFF.md  STORE_PROFILES.md  ToolUp_Top200_SKUs_AdSpend_Efficiency_2026-06-23.xlsx  WASTED_SPEND_REMEDIATION.md  entrypoint.sh  pyproject.toml  serve.sh  stores_mapping.json  waste_audit_config.json
.codex/: config.toml
ads_mcp/: auth.py  client.py  notify.py  sheets.py
campaign_assets/: README.md
control_center/: __init__.py  alerts.py  app.py  clock.py  detectors.py  scheduler.py  shopify.py  store.py  waste.py  webauth.py
mcp_server/: authn.py  authz.py  references.py  server.py
pro-work-supply/: DECISIONS.md  HANDOFF.md  NOTES.md  STAGE1_BUILD_SPEC.md  STAGE1_PROPOSAL.md  STATE.md  negatives_2026-07-03.csv  pws_stage1_3m_lookup.csv
red-tool-store/: NOTES.md  STATE.md  checkpoint2_data.md
scripts/: build_toolup_efficiency_report.py  install_control_center.sh  run_product_exclusion.py  smoke_test.py  test_product_velocity.py
(+43 files in other folders)
