[project]
name = "google-ads-mcp"
version = "0.1.0"
description = "Google Ads MCP server for Claude Code / Cowork"
requires-python = ">=3.11"
dependencies = [
    "google-ads>=25.0.0",
    "google-api-python-client>=2.0.0",
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ads_mcp", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["mcp_server/", "scripts/", "digest_worker/"]
